$Id: History,v 1.24 2001-11-27 15:52:53 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N02 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
27-11-01 mma (exampleN02-V03-02-04)
- vis.mac: /vis/viewer/set/viewpointThetaPhi

19-11-01 John (exampleN02-V03-02-03)
- Updated ExN02VisManager.cc for new graphics systems and defaults.

07-11-01 Satoshi (exampleN02-V03-02-02)
- vis.mac: /vis/viewer/refresh + /vis/viewer/update is replaced 
  with their equivalent command /vis/viewer/flush. 
     
24-10-01 mma (exampleN02-V03-02-01)
- initInter.mac renamed vis.mac
     
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

11-10-01 mma (exampleN02-V03-02-00)
- adapted to new visualisation commands (initInter and EventAction)
- 80 columns max everywhere
         
12-07-01 mma
- DetectorMessenger: setField, help: magnetic field in X dirction      

20-02-01  S.O'Neale (exampleN02-V03-00-03) update reference outputs following
   materials-V03-00-04 (tagset 268)

09-02-01 M.Asai (exampleN02-V03-00-02)
- Migration to STL vector classes
 affected file : ExN02SteppingVerbose.cc

31-02-05 S.O'Neale (exampleN02-V03-00-01)
- update reference output for Batch Mode system testing for
  exampleN02-V03-00-00 and recent EM Physics tags.

31-01-01 G.Cosmo (exampleN02-V03-00-00)
- fix to ExN02ChamberParameterisation and ExN02DetectorConstruction