@@ -1,4 +1,4 @@
-$Id: History,v 1.24 2001-11-27 15:52:53 maire Exp $
+$Id: History,v 1.25 2002-12-16 16:31:42 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+17-12-02 mma (exampleN02-V05-00-00)
+- UI directory /N02/
      
 27-11-01 mma (exampleN02-V03-02-04)
 - vis.mac: /vis/viewer/set/viewpointThetaPhi
